include migration script into deploy script

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "pnpm run build && vite preview",
-    "deploy": "pnpm run build && wrangler deploy",
-    "db:migrations:apply": "wrangler d1 execute apply prod-d1-offline-learning-progress --remote --file=./schema.sql"
+    "deploy": "pnpm run db:migrations:apply && pnpm run build && wrangler deploy",
+    "db:migrations:apply": "wrangler d1 execute prod-d1-offline-learning-progress --remote --file=./schema.sql"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
