--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "pnpm run build && vite preview",
     "deploy": "pnpm run db:migrations:apply && pnpm run build && wrangler deploy",
-    "db:migrations:apply": "wrangler d1 execute prod-d1-offline-learning-progress --remote --file=./schema.sql"
+    "db:migrations:apply": "wrangler d1 migrations apply prod-d1-offline-learning-progress --remote --file=./schema.sql"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
