--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "pnpm run build && vite preview",
-    "deploy": "pnpm run db:migrations:remote && pnpm run build && wrangler deploy",
+    "deploy": "pnpm run build && wrangler deploy",
     "db:migrations": "wrangler d1 migrations apply prod-d1-offline-learning-progress --local",
-    "db:migrations:remote": "wrangler d1 migrations apply prod-d1-offline-learning-progress --remote"
+    "db:migrations:remote": "wrangler d1 migrations apply prod-d1-offline-learning-progress --remote",
+    "predeploy": "pnpm run db:migrations:remote"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
