--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "pnpm db:migrate && run vite",
+    "dev": "npm run db:migrate && run vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "pnpm db:migrate pnpm run build && vite preview",
-    "deploy": "pnpm run build && wrangler deploy",
+    "preview": "npm run db:migrate npm run build && vite preview",
+    "deploy": "npm run build && wrangler deploy",
     "db:migrate": "wrangler d1 migrations apply prod-d1-offline-learning-progress --local",
     "db:migrate:remote": "wrangler d1 migrations apply prod-d1-offline-learning-progress --remote",
-    "predeploy": "pnpm run db:migrate:remote"
+    "predeploy": "npm run db:migrate:remote"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
